start grid and columns

--- a/index.html
+++ b/index.html
@@ -10,23 +10,30 @@
       <h1>Cedar Construction</h1>
       <nav>
         <ul>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Mission</a></li>
-          <li><a href="#">General Contracting</a></li>
-          <li><a href="#">Preconscruction</a></li>
-          <li><a href="#">Consultant Services</a></li>
-          <li><a href="#">Owner Representation</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Commercial</a></li>
-          <li><a href="#">Healthcare</a></li>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Residential</a></li>
+          <li><a href="Services">Services</a></li>
+          <li><a href="Mission">Mission</a></li>
+          <li><a href="GeneralContracting">General Contracting</a></li>
+          <li><a href="Preconstruction">Preconscruction</a></li>
+          <li><a href="ConsultantServices">Consultant Services</a></li>
+          <li><a href="OwnerRepresentation">Owner Representation</a></li>
+          <li><a href="Clients">Clients</a></li>
+          <li><a href="Projects">Projects</a></li>
+          <li><a href="Commercial">Commercial</a></li>
+          <li><a href="Heathcare">Healthcare</a></li>
+          <li><a href="Education">Education</a></li>
+          <li><a href="Residential">Residential</a></li>
           <li><a href="#">Dining</a></li>
           <li><a href="#">Current</a></li>
         </ul>
       </nav>
-      
+      <div class="grid>">
+        <div class="col-2-3">
+          Main Content
+        </div>
+        <div class"col-1-3">
+          Sidebar
+        </div>
+      </div>
 
     </header>
   </body>
