--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="Heathcare">Healthcare</a></li>
           <li><a href="Education">Education</a></li>
           <li><a href="Residential">Residential</a></li>
-          <li><a href="#">Dining</a></li>
-          <li><a href="#">Current</a></li>
+          <li><a href="Dining">Dining</a></li>
+          <li><a href="Current">Current</a></li>
         </ul>
       </nav>
       <div class="grid>">
