adding grid more

--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
           <li><a href="Current">Current</a></li>
         </ul>
       </nav>
-      <div class="grid>">
+    </header>
+      <div class="grid grid-pad">
         <div class="col-2-3">
-          Main Content
+          <article>
+          <h3>Millburn Delicatessen</h3>
+          <p>The Millburn Deli, 328 Millburn Avenue, is currently undergoing renovation. Cedar Construction is the general contractor working with Buchholz Architectural Group. This establishment is open for business during renovation.</p>
+          </article>
         </div>
-        <div class"col-1-3">
-          Sidebar
+        <div class="col-1-3">
+          <article>
+          <h3>Barnabas Health: ACC</h3>
+          <p>Barnabas Ambulatory Care Center, 200 South Orange Avenue, is undergoing construction of new medical facilities and staff offices. Our firm has renovated several spaces in this facility and other Barnabas Health locations in the past 5 years.</p>
+          </article>
         </div>
       </div>
 
-    </header>
   </body>
 </html>
