--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
       <div class="grid grid-pad">
-        <div class="col-2-3">
+        <div class="col-1-3">
           <article>
           <h3>Millburn Delicatessen</h3>
           <p>The Millburn Deli, 328 Millburn Avenue, is currently undergoing renovation. Cedar Construction is the general contractor working with Buchholz Architectural Group. This establishment is open for business during renovation.</p>
@@ -40,7 +40,12 @@
           <p>Barnabas Ambulatory Care Center, 200 South Orange Avenue, is undergoing construction of new medical facilities and staff offices. Our firm has renovated several spaces in this facility and other Barnabas Health locations in the past 5 years.</p>
           </article>
         </div>
+        <div class="col-1-3">
+            <article>
+            <h3>Building Construction in North Jersey</h3>
+            <p>Cedar Construction has a staff of seasoned professionals with vast experience in the building construction industry. We bring a wealth of knowledge and talent to each project. We specialize in real estate development and building construction for commercial and residential projects.</p>
+            </article>
+        </div>
       </div>
-
   </body>
 </html>
