--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div class="grid grid-pad">
     <header>
       <h1>Cedar Construction</h1>
       <nav>
@@ -27,6 +28,7 @@
         </ul>
       </nav>
     </header>
+  </div>
       <div class="grid grid-pad">
         <div class="col-1-3">
           <article>
