--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Cedar Construction</title>
-  <meta name="description" content="Cedar Construction">
-  <link rel="stylesheet" href="css/main.css">
+    <title>Cedar Construction</title>
+    <meta name="description" content="Cedar Construction">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="grid grid-pad">
-    <header>
-      <h1>Cedar Construction</h1>
-      <nav>
+      <header>
+        <h1>Cedar Construction</h1>
+          <p><img src="img/main_logo.jpg"></p>
+        <nav>
         <ul>
           <li><a href="Services">Services</a></li>
           <li><a href="Mission">Mission</a></li>
@@ -26,10 +27,10 @@
           <li><a href="Dining">Dining</a></li>
           <li><a href="Current">Current</a></li>
         </ul>
-      </nav>
-    </header>
-  </div>
-      <div class="grid grid-pad">
+        </nav>
+      </header>
+    </div>
+    <div class="grid grid-pad">
         <div class="col-1-3">
           <article>
           <h3>Millburn Delicatessen</h3>
